src/components/sections/homepage/security/security.module.scss
@import '~/css/helpers';

.section {
  padding: 0 var(--container-sides-space) 216px;

  @include respond-to('tablet-lg') {
    padding-bottom: 80px;
  }

  .container {
    max-width: 1280px;
    margin: auto;

    .cardsWrapper {
      display: grid;
      grid-template-columns: repeat(2, calc(50% - 20px));
      grid-gap: 40px;

      @include respond-to('tablet-lg') {
        grid-template-columns: auto;
        grid-gap: 32px;
      }

      .card {
        height: 100%;
        background: linear-gradient(
            256.14deg,
            #111827 0%,
            #111826 4.7%,
            #101726 8.9%,
            #101725 12.8%,
            #101624 16.56%,
            #0f1523 20.37%,
            #0f1421 24.4%,
            #0e1420 28.83%,
            #0d121e 33.84%,
            #0c111c 39.6%,
            #0b1019 46.3%,
            #0a0e16 54.1%,
            #080c13 63.2%,
            #070a10 73.76%,
            #05070c 85.97%,
            #030407 100%
          ),
          #fff;
        border: 1px solid rgb(31 41 55 / 0.86);
        border-radius: 16px;
        padding: 32px;
        overflow: hidden;
        position: relative;

        @include respond-to('tablet') {
          padding: 24px;
          border-radius: 24px;
          display: flex;
          flex-direction: column;
          justify-content: space-between;
        }

        .title {
          font-size: 24px;
          line-height: 38px;
          letter-spacing: -0.02em;
          margin-bottom: 24px;
          max-width: 380px;

          @include respond-to('tablet') {
            font-size: 18px;
            line-height: 24px;
          }

          span {
            color: var(--grey-500);
          }
        }

        .list {
          font-size: 14px;
          line-height: 20px;
          letter-spacing: -0.02em;
          display: flex;
          gap: 12px;
          flex-direction: column;

          li {
            display: flex;
            align-items: center;
            gap: 8px;

            svg {
              color: var(--white);
            }

            p {
              color: var(--grey-400);
            }
          }
        }

        .backgroundWrapper {
          position: absolute;
          top: 0;
          right: 24px;
          height: 100%;
          max-height: unset;

          @include respond-to('tablet-lg') {
            display: flex;
            align-items: center;
            justify-content: center;
          }

          @include respond-to('tablet') {
            position: relative;
            height: 250px;
            top: unset;
            bottom: 0;
            left: 0;
          }

          svg {
            height: 100%;
            max-height: unset;

            @include respond-to('tablet-lg') {
              height: 310px;
              max-height: 400px;
              transform-origin: center;
              transform: translateX(-50%) rotate(-90deg);
            }

            @include respond-to('tablet') {
              height: calc(98vw - 80px);
              transform: rotate(-90deg);
            }
          }
        }

        .marqueeContainer {
          position: absolute;
          transform: translate(calc(50% - 100px), 0);
          height: 100%;
          width: 100%;
          right: 0;
          top: 0;
          mask-image: linear-gradient(
            0deg,
            rgb(0 0 0 / 0) 0%,
            var(--white) 10%,
            var(--white) 90%,
            rgb(0 0 0 / 0) 100%
          );
          margin-top: 0;

          @include respond-to('tablet-lg') {
            position: relative;
            transform: unset;
            mask-image: linear-gradient(
              90deg,
              rgb(0 0 0 / 0) 0%,
              var(--white) 10%,
              var(--white) 90%,
              rgb(0 0 0 / 0) 100%
            );
            height: auto;
            margin-top: 32px;
          }

          .marquee {
            width: 100%;
            height: 100%;
            top: 0;
            right: 0;

            .imageWrapper {
              width: 80px;
              height: 80px;
              background: linear-gradient(
                180deg,
                rgb(0 0 0 / 0.7744) 0%,
                rgb(0 0 0 / 0.2112) 100%
              );
              box-shadow: inset 0px 0px 2px rgb(125 125 125 / 0.25);
              border-radius: 8px;
              display: flex;
              align-items: center;
              justify-content: center;
              border: 1px solid rgb(31 41 55 / 0.6);
              margin: 0 8px;
              user-select: none;

              & svg {
                width: 32px;
                height: 32px;
                color: var(--grey-400);
              }
            }
          }
        }

        .cta {
          position: absolute;
          top: 16px;
          right: 16px;
          width: 40px;
          height: 40px;
          display: flex;
          align-items: center;
          justify-content: center;
          background: rgb(17 24 39 / 0.56);
          border-radius: 8px;
          border: 1px solid #1f2937db;
          backdrop-filter: blur(2px);
          transition-property: box-shadow, transform;
          transition-duration: var(--duration-normal);
          transition-timing-function: var(--ease-1);

          @include respond-to('tablet-lg') {
            top: unset;
            bottom: 16px;
          }

          &:hover {
            box-shadow: 0 0 10px 2px #1f2937db;
            transform: scale(1.1);
          }
        }
      }
    }
  }
}

.securityAnimation {
  mask: linear-gradient(
    0deg,
    transparent 3%,
    black 18%,
    black 82%,
    transparent 97%
  );
}

